@@ -1,5 +1,7 @@
 package io.littlehorse.test.internal.step;
 
+import static org.junit.jupiter.api.Assertions.*;
+
 import io.littlehorse.sdk.common.LHLibUtil;
 import io.littlehorse.sdk.common.proto.ListTaskRunsRequest;
 import io.littlehorse.sdk.common.proto.LittleHorseGrpc.LittleHorseBlockingStub;
@@ -11,7 +13,7 @@ import io.littlehorse.test.internal.TestExecutionContext;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import org.testcontainers.shaded.org.apache.commons.lang3.NotImplementedException;
+import java.util.stream.Collectors;
 
 public class VerifyTaskRunOutputsStep extends AbstractStep {
 
@@ -28,17 +30,15 @@ public class VerifyTaskRunOutputsStep extends AbstractStep {
 
         TaskRunList taskRuns = lhClient.listTaskRuns(
                 ListTaskRunsRequest.newBuilder().setWfRunId(wfRunId).build());
-        if (expectedOutputs.size() != taskRuns.getResultsList().size()) {
-            throw new StepExecutionException(
-                    id,
-                    context.getWfRunId(),
-                    "Expected %d taskRuns but got %d".formatted(expectedOutputs.size(), taskRuns.getResultsCount()));
-        }
+        assertEquals(
+                expectedOutputs.size(),
+                taskRuns.getResultsList().size(),
+                String.format("Expected %d taskRuns but got %d", expectedOutputs.size(), taskRuns.getResultsCount()));
 
         // Currently, the result of the rpc ListTaskRuns is NOT sorted. It will
         // be sorted after LH-152. So for now we manually sort.
         List<VariableValue> expected =
-                expectedOutputs.stream().map(LHLibUtil::objToVarVal).toList();
+                expectedOutputs.stream().map(LHLibUtil::objToVarVal).collect(Collectors.toList());
 
         // Make a copy because you can't modify the proto list
         List<TaskRun> sortedTasks = new ArrayList<>();
@@ -51,21 +51,50 @@ public class VerifyTaskRunOutputsStep extends AbstractStep {
 
         for (int i = 0; i < sortedTasks.size(); i++) {
             VariableValue taskOutput = sortedTasks.get(i).getAttempts(0).getOutput();
-
-            if (!areEqual(taskOutput, expected.get(i))) {
-                throw new StepExecutionException(id, context.getWfRunId(), "Task outputs didn't match!");
-            }
+            areEqual(taskOutput, expected.get(i));
         }
     }
 
-    private boolean areEqual(VariableValue first, VariableValue second) {
-        if (first.getValueCase() != second.getValueCase()) return false;
-
+    private void areEqual(VariableValue first, VariableValue second) {
+        assertSame(
+                first.getValueCase(),
+                second.getValueCase(),
+                "Expected " + first.getValueCase() + " but got " + second.getValueCase());
+        Object firstValue;
+        Object secondValue;
         switch (first.getValueCase()) {
             case INT:
-                return first.getInt() == second.getInt();
+                firstValue = first.getInt();
+                secondValue = second.getInt();
+                break;
+            case STR:
+                firstValue = first.getStr();
+                secondValue = second.getStr();
+                break;
+            case BOOL:
+                firstValue = first.getBool();
+                secondValue = second.getBool();
+                break;
+            case BYTES:
+                firstValue = first.getBytes();
+                secondValue = second.getBytes();
+                break;
+            case DOUBLE:
+                firstValue = first.getDouble();
+                secondValue = second.getDouble();
+                break;
+            case JSON_ARR:
+                firstValue = first.getJsonArr();
+                secondValue = second.getJsonArr();
+                break;
+            case JSON_OBJ:
+                firstValue = first.getJsonObj();
+                secondValue = second.getJsonObj();
+                break;
             default:
+                throw new UnsupportedOperationException(
+                        String.format("As of now, %s values are not supported", first.getValueCase()));
         }
-        throw new NotImplementedException("As of now, only INT values are supported");
+        assertEquals(firstValue, secondValue);
     }
 }
